<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/back_header"/>

    <ImageView
        android:id="@+id/iv"
        android:layout_width="match_parent"
        android:layout_height="380dp"
        android:layout_marginTop="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/can_we"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:letterSpacing="0.1"
        android:text="@string/noInternet"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/can_we"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:letterSpacing="0.1"
        android:paddingLeft="35dp"
        android:paddingRight="35dp"
        android:text="@string/tryAgain"
        android:textSize="15sp" />

    <RelativeLayout
        android:id="@+id/rl_tryAgain"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:elevation="10dp"
        android:background="@drawable/color_gradient">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/try_Again"
            android:textAllCaps="true"
            android:textSize="18sp"
            android:layout_centerInParent="true"/>

    </RelativeLayout>

</RelativeLayout>

