<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="45dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/friends_List"
                android:textAllCaps="true"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>
    <RelativeLayout
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content">
        <CheckBox
            android:id="@+id/cb_selectAllFriends"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/select_All"
            android:textColor="@color/black"
            android:theme="@style/checkBoxStyle" />


<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginRight="10dp"
    android:padding="10dp"
    android:minHeight="50dp"
    android:gravity="center"
    android:orientation="horizontal"
    android:layout_alignParentEnd="true"
    android:layout_alignParentRight="true">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:gravity="center"
        android:layout_marginRight="10dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"

        android:text="Selected"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:gravity="center"
        android:id="@+id/count_tv"

        android:text="0"/>
</LinearLayout>


    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="350dp">

        <TextView
            android:id="@+id/tv_no_friends"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/no_friends_available"
            android:textColor="@color/black"
            android:textSize="17sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_friends"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginTop="10dp"
                android:visibility="gone" />

        <Button
            android:id="@+id/sendSelectedfriends"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_below="@+id/rv_friends"
            android:background="@drawable/color_gradient"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="17sp" />

    </RelativeLayout>

</LinearLayout>