<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/back_header"
        android:visibility="gone"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="45dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="5dp"
                android:layout_gravity="center"
                app:cardCornerRadius="50dp"
                app:cardElevation="10dp">

                <ImageView
                    android:id="@+id/ivPic"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/user" />

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="30dp"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="5dp"
                    android:backgroundTint="@color/colorAccent">

                    <EditText
                        android:id="@+id/et_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:inputType="textPersonName"
                        android:maxLength="20"
                        android:padding="10dp"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textColorHint="@color/grey"
                        android:textSize="15sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/user_name"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="5dp">

                    <EditText
                        android:id="@+id/et_userName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:digits="@string/filter_name"
                        android:imeOptions="actionNext"
                        android:inputType="textPersonName"
                        android:maxLength="20"
                        android:padding="10dp"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textColorHint="@color/grey"
                        android:textSize="15sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_referral"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/referral"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="5dp">

                    <EditText
                        android:id="@+id/et_referral"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:digits="@string/filter_name"
                        android:imeOptions="actionNext"
                        android:inputType="textPersonName"
                        android:maxLength="20"
                        android:padding="10dp"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textColorHint="@color/grey"
                        android:textSize="15sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_mobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/mobile_number"
                    android:visibility="gone">

                    <EditText
                        android:id="@+id/et_mobile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:digits="@string/numbers"
                        android:drawablePadding="10dp"
                        android:inputType="number"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textColorHint="@color/grey"
                        android:textSize="15sp" />


                </com.google.android.material.textfield.TextInputLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="20dp"
                    android:gravity="center_horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:baselineAligned="false"
                        android:orientation="horizontal">

                        <RelativeLayout
                            android:id="@+id/rl_genderMale"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="@drawable/gender_male_background"
                            android:onClick="onGenderMaleClicked"
                            android:padding="0dp">

                            <TextView
                                android:id="@+id/tv_genderMaleText"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerInParent="true"
                                android:text="@string/male"
                                android:textColor="@color/white"
                                android:textSize="17sp" />

                        </RelativeLayout>

                        <RelativeLayout
                            android:id="@+id/rl_genderFeMale"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="@drawable/gender_female_background"
                            android:onClick="onGenderFeMaleClicked">

                            <TextView
                                android:id="@+id/tv_genderFeMaleText"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerInParent="true"
                                android:text="@string/female"
                                android:textColor="@color/white"
                                android:textSize="17sp" />

                        </RelativeLayout>

                    </LinearLayout>

                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_create"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:background="@color/colorAccent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/create_account"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </RelativeLayout>

</RelativeLayout>