<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sign_in">

    <include
        layout="@layout/back_header"
        android:visibility="gone" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="45dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="10dp"
            android:background="@color/trans_grey"
            android:orientation="vertical">

            <com.toptoche.searchablespinnerlibrary.SearchableSpinner
                android:id="@+id/spCountry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
                android:backgroundTint="@color/white"
                android:layout_gravity="center"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

              <!--  <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:padding="3dp"
                    android:src="@drawable/pluss" />-->

                <EditText
                    android:id="@+id/etPhoneNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:background="@android:color/transparent"
                    android:digits="@string/filter_number"
                    android:hint="Mobile Number"
                    android:inputType="phone"
                    android:padding="10dp"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="16sp" />

            </LinearLayout>

            <EditText
                android:id="@+id/et_otp"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:backgroundTint="@color/colorAccent"
                android:gravity="center"
                android:hint="Enter OTP"
                android:inputType="number"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:visibility="gone" />

            <Button
                android:id="@+id/bSendOtp"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="20dp"
                android:background="@drawable/button_white"
                android:onClick="onSendOTPClicked"
                android:text="@string/send_otp"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:visibility="visible" />

            <Button
                android:id="@+id/bVerify"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="20dp"
                android:background="@drawable/button_white"
                android:text="@string/verify"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/bReset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_margin="10dp"
                android:onClick="onResetCLicked"
                android:text="@string/reset_number"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:visibility="gone" />
        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>